[tool.poetry]
name = "spaceship_battles"
version = "0.1.0"
description = ""
authors = ["Sherif H <sherifh@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
